feat: ajustes diversos nas implementações iniciais do projeto
